--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -2,27 +2,20 @@
 <html>
 <head>
     <title>Sign Up</title>
-    <script>
-        function validateForm() {
-            const password = document.getElementById('password').value;
-            if (password.length < 8) {
-                alert('Password must be at least 8 characters long.');
-                return false;
-            }
-            return true;
-        }
-    </script>
 </head>
 <body>
 <h1>Sign Up</h1>
-<form action="/sign-up" method="post" onsubmit="return validateForm()">
+<form action="/sign-up" method="post">
     <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br>
+    <input type="text" id="username" name="username" required>
+    <br>
     <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br>
+    <input type="email" id="email" name="email" required>
+    <br>
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required minlength="8"><br>
-    <button type="submit">Sign Up</button>
+    <input type="password" id="password" name="password" required>
+    <br>
+    <input type="submit" value="Sign Up">
 </form>
 </body>
 </html>
