--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,139 @@
 <html>
 <head>
     <title>WebSocket Chat</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        :root {
+            --background-color: #FF7F3E;
+            --text-color: #000000;
+            --user-name-color:;
+            --message-back-color:;
+            --button-back-color:;
+            --button-font-color:;
+            --input-back-color:;
+            --inout-font-colot:;
+            --areas-back-color:;
+        }
+      
+
+        body {
+            background-color: --background-color;
+            display: flex;
+            flex-direction: column;
+            height: 98vh;
+            width: 98vw;
+            margin: 10px;
+            overflow: hidden; /* добавленный стиль */
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 20px; /* добавленный отступ сверху */
+        }
+
+        .chat-container {
+            display: flex;
+            flex: 1;
+        }
+
+        #users-area {
+            border-radius: 8px;
+            width: 20%;
+            overflow: auto;
+            background-color: #f2f2f2;
+            padding: 10px; /* добавленный отступ внутри блока */
+            min-width: 160px;
+        }
+
+        #chat-area {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            max-width: 50%;
+            margin:auto;
+            margin-top:10px;
+            margin-bottom: 10px;
+            min-width: 160px;
+        }
+
+        #messages_list {
+            flex: 1;
+            overflow: auto;
+            padding: 10px; 
+            margin-right: 10px; /* отступ справа для разделения блоков */
+            background-color: #e6e6e6; /* цвет фона для блока сообщений */
+            border-radius: 8px; /* закругляем углы блока сообщений */
+        }
+
+        .user-message {
+            border: 25px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            padding: 15px;
+            margin: 4px 0;
+            font-size: small;
+        }
+
+        .message-username {
+            color: #797979;  /* Цвет имени пользователя */
+            margin-bottom: 5px;  /* Добавляем небольшой отступ между именем и текстом сообщения */
+        }
+
+        .input-group {
+            display: flex;
+            align-items: center;
+            padding: 10px 10px 10px 10px;
+        }
+
+        #messageInput {
+
+            flex: 1;
+            
+            height: 40px;
+            border-radius: 8px; /* закругляем углы поля ввода */
+            border: 1px solid #ccc; /* добавляем рамку */
+            /* добавляем внутренний отступ */
+        }
+
+        button {
+            min-width: 80px;
+            flex: 0;
+            border-radius: 8px; /* закругляем углы кнопки */
+            background-color: #4caf50; /* изменяем цвет кнопки */
+            border: none; /* убираем границу кнопки */
+            color: white; /* цвет текста на кнопке */
+            margin-left: 10px;
+        }
+
+    
+
+    </style>
 </head>
 <body>
-<h1>WebSocket Chat</h1>
-<div id="messages"></div>
-<input type="text" id="messageInput" autocomplete="off"/>
-<button onclick="sendMessage()">Send</button>
+    <h1>WebSocket Chat</h1>
+    
+    <div class="chat-container">
+        <div id="users-area">
+            <h2>Users</h2>
+            <div id="users_list">
+                Users
+            </div>
 
+        </div>
+       
+        <div id="chat-area">
+            
+            <div id="messages_list">
+               
+            </div>
+            <div class="input-group">
+                <input type="text" id="messageInput" class="form-control" autocomplete="off"/>
+                <button onclick="sendMessage()" class="btn btn-primary">Send</button>
+            </div>
+        </div>
+    </div>
+
+    
 <script>
     let sessionId = null;
     let ws = new WebSocket("ws://localhost:8000/ws");
@@ -18,11 +144,26 @@
     };
 
     ws.onmessage = function(event) {
-        let messagesDiv = document.getElementById('messages');
-        let message = document.createElement('div');
-        message.textContent = event.data;
-        messagesDiv.appendChild(message);
+        let messagesDiv = document.getElementById('messages_list');
+        let messageData = event.data.split(':'); // Разделяем данные на части по символу ":"
+        let user_name = messageData[0].trim(); // Получаем имя пользователя (убираем пробелы)
+        let messageText = messageData.slice(1).join(':').trim(); // Получаем текст сообщения (с учётом возможного наличия ':' в сообщении)
 
+        let message = document.createElement('div');
+        message.className = 'user-message';
+
+        let userNameElement = document.createElement('div');
+        userNameElement.textContent = user_name;
+        userNameElement.className = 'message-username';
+
+        let messageElement = document.createElement('div');
+        messageElement.textContent = messageText;
+        messageElement.className = 'message-text';
+
+        message.appendChild(userNameElement);  // Добавляем элемент с именем пользователя в сообщение
+        message.appendChild(messageElement);  // Добавляем элемент с текстом сообщения в сообщение
+
+        messagesDiv.appendChild(message);
         limitMessages();
     };
 
@@ -49,8 +190,8 @@
     });
 
     function limitMessages() {
-        let messagesDiv = document.getElementById('messages');
-        const maxMessagesToShow = 5;
+        let messagesDiv = document.getElementById('messages_list');
+        const maxMessagesToShow = 10;
         if (messagesDiv.children.length > maxMessagesToShow) {
             while (messagesDiv.children.length > maxMessagesToShow) {
                 messagesDiv.removeChild(messagesDiv.children[0]);
