--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,109 +4,124 @@
     <title>WebSocket Chat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        :root {
-            --background-color: #FF7F3E;
-            --text-color: #000000;
-            --user-name-color:;
-            --message-back-color:;
-            --button-back-color:;
-            --button-font-color:;
-            --input-back-color:;
-            --inout-font-colot:;
-            --areas-back-color:;
-        }
-      
+      :root {
+    --background-color: #000000;
+    --text-color: #ffffff;
+    --user-name-color: rgb(150,150,150);
+    --message-back-color: #000000;
+    --button-back-color: #000000;
+    --button-font-color: #000000;
+    --input-back-color: #000000;
+    --input-font-color: #ffffff;
+    --areas-back-color: rgb(24,24,24);
+    }
 
-        body {
-            background-color: --background-color;
-            display: flex;
-            flex-direction: column;
-            height: 98vh;
-            width: 98vw;
-            margin: 10px;
-            overflow: hidden; /* добавленный стиль */
-        }
+    body {
+        background-color: var(--background-color);
+        color: var(--text-color);
+        display: flex;
+        flex-direction: column;
+        height: 98vh;
+        width: 98vw;
+        margin: 10px;
+        overflow: hidden; /* добавленный стиль */
+    }
 
-        h1 {
-            text-align: center;
-            margin-top: 20px; /* добавленный отступ сверху */
-        }
+    h1 {
+        text-align: center;
+        margin-top: 20px; /* добавленный отступ сверху */
+    }
 
-        .chat-container {
-            display: flex;
-            flex: 1;
-        }
+    .chat-container {
+        display: flex;
+        flex: 1;
+    }
 
-        #users-area {
-            border-radius: 8px;
-            width: 20%;
-            overflow: auto;
-            background-color: #f2f2f2;
-            padding: 10px; /* добавленный отступ внутри блока */
-            min-width: 160px;
-        }
+    #users-area {
+        border-radius: 8px;
+        width: 15%;
+        overflow: auto;
+        background-color: var(--areas-back-color);
+        padding: 10px; /* добавленный отступ внутри блока */
+        min-width: 160px;
+    }
 
-        #chat-area {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            max-width: 50%;
-            margin:auto;
-            margin-top:10px;
-            margin-bottom: 10px;
-            min-width: 160px;
-        }
+    #chat-area {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        max-width: 50%;
+        margin: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        min-width: 160px;
+        background-color: var(--areas-back-color);
+        border-radius: 8px;
+    }
 
-        #messages_list {
-            flex: 1;
-            overflow: auto;
-            padding: 10px; 
-            margin-right: 10px; /* отступ справа для разделения блоков */
-            background-color: #e6e6e6; /* цвет фона для блока сообщений */
-            border-radius: 8px; /* закругляем углы блока сообщений */
-        }
+    #messages_list {
+        flex: 1;
+        overflow-x:none;
+        padding: 10px;
+        margin-right: 10px; /* отступ справа для разделения блоков */
+        background-color: var(--input-back-color); /* цвет фона для блока сообщений */
+        border-radius: 8px; /* закругляем углы блока сообщений */
+        background-color: var(--areas-back-color);
+        overflow-y: auto;
+        scrollbar-color: #6969dd #e0e0e0;
+        scrollbar-width: thin;
+        max-height:87%;
+        
+    }
+   
+    #messages_list ::-webkit-scrollbar-track {
+        background: var(--background-color);
+    }
 
-        .user-message {
-            border: 25px;
-            background-color: #ffffff;
-            border-radius: 8px;
-            padding: 15px;
-            margin: 4px 0;
-            font-size: small;
-        }
 
-        .message-username {
-            color: #797979;  /* Цвет имени пользователя */
-            margin-bottom: 5px;  /* Добавляем небольшой отступ между именем и текстом сообщения */
-        }
+    .user-message {
+        border: 25px;
+        background-color: var(--message-back-color);
+        border-radius: 8px;
+        padding: 15px;
+        margin: 4px 0;
+        font-size: medium;
+    }
 
-        .input-group {
-            display: flex;
-            align-items: center;
-            padding: 10px 10px 10px 10px;
-        }
+    .message-username {
+        color: var(--user-name-color);  /* Цвет имени пользователя */
+        margin-bottom: 5px;  /* Добавляем небольшой отступ между именем и текстом сообщения */
+        font-size: medium;
+        font-weight: bold;
+    }
 
-        #messageInput {
+    .input-group {
+        display: flex;
+        align-items: center;
+        
+        padding: 10px 10px 10px 10px;
+    }
 
-            flex: 1;
-            
-            height: 40px;
-            border-radius: 8px; /* закругляем углы поля ввода */
-            border: 1px solid #ccc; /* добавляем рамку */
-            /* добавляем внутренний отступ */
-        }
+    #messageInput {
+        flex: 1;
+        height: 40px;
+        border-radius: 8px; /* закругляем углы поля ввода */
+        border: 1px solid #ccc; /* добавляем рамку */
+        background-color: var(--message-back-color); /* цвет фона для поля ввода */
+        color: var(--input-font-color); /* цвет текста в поле ввода */
+    }
 
-        button {
-            min-width: 80px;
-            flex: 0;
-            border-radius: 8px; /* закругляем углы кнопки */
-            background-color: #4caf50; /* изменяем цвет кнопки */
-            border: none; /* убираем границу кнопки */
-            color: white; /* цвет текста на кнопке */
-            margin-left: 10px;
-        }
-
-    
+    button {
+        min-width: 80px;
+        flex: 0;
+        border-radius: 8px; /* закругляем углы кнопки */
+        background-color: var(--button-back-color); /* изменяем цвет кнопки */
+        border: none; /* убираем границу кнопки */
+        color: var(--button-font-color); /* цвет текста на кнопке */
+        margin-left: 10px;
+        background-color: var(--button-back-color);
+    }
+        
 
     </style>
 </head>
@@ -155,7 +170,7 @@
         let userNameElement = document.createElement('div');
         userNameElement.textContent = user_name;
         userNameElement.className = 'message-username';
-
+        
         let messageElement = document.createElement('div');
         messageElement.textContent = messageText;
         messageElement.className = 'message-text';
