--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,128 +1,129 @@
 <!DOCTYPE html>
 <html>
 <head>
+   
     <title>WebSocket Chat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      :root {
-    --background-color: #000000;
-    --text-color: #ffffff;
-    --user-name-color: rgb(150,150,150);
-    --message-back-color: #000000;
-    --button-back-color: #000000;
-    --button-font-color: #000000;
-    --input-back-color: #000000;
-    --input-font-color: #ffffff;
-    --areas-back-color: rgb(24,24,24);
-    }
+        :root {
+            --background-color: #222;
+            --text-color: #ffffff;
+            --user-name-color: rgb(150,150,150);
+            --message-back-color: #444;
+            --button-back-color: #4c81af;
+            --button-font-color: #ffffff;
+            --input-back-color: #444;;
+            --input-font-color: #ffffff;
+            --areas-back-color: #333;
+        }
 
-    body {
-        background-color: var(--background-color);
-        color: var(--text-color);
-        display: flex;
-        flex-direction: column;
-        height: 98vh;
-        width: 98vw;
-        margin: 10px;
-        overflow: hidden; /* добавленный стиль */
-    }
+        body {
+            background-color: var(--background-color);
+            color: var(--text-color);
+            display: flex;
+            flex-direction: column;
+            height: 98vh;
+            width: 98vw;
+            margin: 10px;
+            overflow: hidden;
+        }
 
-    h1 {
-        text-align: center;
-        margin-top: 20px; /* добавленный отступ сверху */
-    }
+        h1 {
+            text-align: center;
+            margin-top: 20px;
+        }
 
-    .chat-container {
-        display: flex;
-        flex: 1;
-    }
+        .chat-container {
+            display: flex;
+            flex: 1;
+        }
 
-    #users-area {
-        border-radius: 8px;
-        width: 15%;
-        overflow: auto;
-        background-color: var(--areas-back-color);
-        padding: 10px; /* добавленный отступ внутри блока */
-        min-width: 160px;
-    }
+        #users-area {
+            border-radius: 8px;
+            width: 20%;
+            overflow: auto;
+            background-color: var(--areas-back-color);
+            padding: 10px;
+            min-width: 160px;
+            border: 1px solid #555;
+            margin-bottom: 10px;
+        }
 
-    #chat-area {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        max-width: 50%;
-        margin: auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        min-width: 160px;
-        background-color: var(--areas-back-color);
-        border-radius: 8px;
-    }
+        #chat-area {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            max-width: 50%;
+            margin: auto;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            min-width: 160px;
+            background-color: var(--areas-back-color);
+            border-radius: 8px;
+            border: 1px solid #555;
+        }
 
-    #messages_list {
-        flex: 1;
-        overflow-x:none;
-        padding: 10px;
-        margin-right: 10px; /* отступ справа для разделения блоков */
-        background-color: var(--input-back-color); /* цвет фона для блока сообщений */
-        border-radius: 8px; /* закругляем углы блока сообщений */
-        background-color: var(--areas-back-color);
-        overflow-y: auto;
-        scrollbar-color: #6969dd #e0e0e0;
-        scrollbar-width: thin;
-        max-height:87%;
-        
-    }
-   
-    #messages_list ::-webkit-scrollbar-track {
-        background: var(--background-color);
-    }
+        #messages_list {
+            flex: 1;
+            overflow-y: auto;
+            scrollbar-color: #6969dd #e0e0e0;
+            scrollbar-width: thin;
+            padding: 10px;
+            margin-right: 10px;
+            background-color: var(--areas-back-color);
+            border-radius: 8px;
+            max-height: calc(100% - 60px);
+        }
 
+        #messages_list ::-webkit-scrollbar-track {
+            background: var(--background-color);
+        }
 
-    .user-message {
-        border: 25px;
-        background-color: var(--message-back-color);
-        border-radius: 8px;
-        padding: 15px;
-        margin: 4px 0;
-        font-size: medium;
-    }
+        .user-message {
+            border: 25px;
+            background-color: var(--message-back-color);
+            border-radius: 8px;
+            padding: 15px;
+            margin: 4px 0;
+            font-size: medium;
+            border: 1px solid #555;
+        }
 
-    .message-username {
-        color: var(--user-name-color);  /* Цвет имени пользователя */
-        margin-bottom: 5px;  /* Добавляем небольшой отступ между именем и текстом сообщения */
-        font-size: medium;
-        font-weight: bold;
-    }
+        .message-username {
+            color: var(--user-name-color);
+            margin-bottom: 5px;
+            font-size: medium;
+            font-weight: bold;
+        }
 
-    .input-group {
-        display: flex;
-        align-items: center;
-        
-        padding: 10px 10px 10px 10px;
-    }
+        .input-group {
+            display: flex;
+            align-items: center;
+            padding: 10px 10px 10px 10px;
+        }
 
-    #messageInput {
-        flex: 1;
-        height: 40px;
-        border-radius: 8px; /* закругляем углы поля ввода */
-        border: 1px solid #ccc; /* добавляем рамку */
-        background-color: var(--message-back-color); /* цвет фона для поля ввода */
-        color: var(--input-font-color); /* цвет текста в поле ввода */
-    }
+        #messageInput {
+            flex: 1;
+            height: 40px;
+            border-radius: 8px 0 0 8px; /* Убираем закругление справа */
+            background-color: var(--input-back-color);
+            color: var(--input-font-color);
+            border: none; /* Убираем границу для поля ввода */
+            padding: 0 10px; /* Добавим внутренний отступ для поля ввода */
+            
+        }
 
-    button {
-        min-width: 80px;
-        flex: 0;
-        border-radius: 8px; /* закругляем углы кнопки */
-        background-color: var(--button-back-color); /* изменяем цвет кнопки */
-        border: none; /* убираем границу кнопки */
-        color: var(--button-font-color); /* цвет текста на кнопке */
-        margin-left: 10px;
-        background-color: var(--button-back-color);
-    }
-        
-
+        button {
+            min-width: 80px;
+            height: 40px;
+            flex: 0;
+            border-radius: 0 8px 8px 0; /* Добавляем закругление справа для кнопки */
+            background-color: var(--button-back-color);
+            color: var(--button-font-color);
+            margin-left: 10px;
+            border: none; /* Убираем границу для кнопки */
+            cursor: pointer; /* Делаем курсор указателем при наведении на кнопку */
+        }
     </style>
 </head>
 <body>
@@ -143,8 +144,8 @@
                
             </div>
             <div class="input-group">
-                <input type="text" id="messageInput" class="form-control" autocomplete="off"/>
-                <button onclick="sendMessage()" class="btn btn-primary">Send</button>
+                <input type="text" id="messageInput" class="form-control" autocomplete="off" />
+                <button onclick="sendMessage()">Send</button>
             </div>
         </div>
     </div>
@@ -184,7 +185,7 @@
     function sendMessage() {
         let input = document.getElementById("messageInput");
         let message = input.value;
-        if (ws.readyState === WebSocket.OPEN) {
+        if (ws.readyState === WebSocket.OPEN && message!="") {
             ws.send(message);
             input.value = '';
         }
@@ -216,6 +217,7 @@
     }
 
     connectWebSocket();
+}
 </script>
 </body>
 </html>
