--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -2,20 +2,75 @@
 <html>
 <head>
     <title>Sign Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #222; /* Цвет фона */
+            color: #fff; /* Цвет текста */
+        }
+
+        form {
+            text-align: left;
+            width: 300px;
+            padding: 20px;
+            border: 1px solid #555; /* Цвет границ формы */
+            border-radius: 5px;
+            box-sizing: border-box;
+            background-color: #333; /* Цвет фона формы */
+            border-radius: 10px;        
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        input {
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 8px;
+            box-sizing: border-box;
+            background-color: #444; /* Цвет фона поля ввода */
+            color: #fff; /* Цвет текста в полях ввода */
+            border: 1px solid #555; /* Цвет границ поля ввода */
+            border-radius: 10px;
+        }
+
+        button {
+            background-color: #4c81af;
+            color: #fff;
+            border: none;
+            padding: 10px 0; /* Изменим заполнение кнопки */
+            width: 100%; /* Растянем кнопку на всю доступную ширину */
+            cursor: pointer;
+            border-radius: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #4c81af; /* Adjust the color to your preference */
+            display: block;
+            text-align: center; /* Center the text */
+            margin-top: 10px; /* Add some space between the button and the link */
+        }
+        
+    </style>
 </head>
 <body>
-<h1>Sign Up</h1>
-<form action="/sign-up" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-    <br>
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
-    <br>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <br>
-    <input type="submit" value="Sign Up">
-</form>
+    <form action="/sign-up" method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <button type="submit">Sign Up</button>
+        <a href="/app/templates/auth.html">Already have an account? Log in</a> 
+    </form>
 </body>
 </html>
