--- a/app/templates/sign_up.html
+++ b/app/templates/sign_up.html
@@ -70,7 +70,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
         <button type="submit">Sign Up</button>
-        <a href="/app/templates/auth.html">Already have an account? Log in</a> 
+        <a href="/auth">Already have an account? Log in!</a> 
     </form>
 </body>
 </html>
