--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -50,10 +50,23 @@
             cursor: pointer;
             border-radius: 10px;
         }
+
+        p{
+            text-align:center;
+            color: rgb(223, 117, 117);
+        }
+        a {
+            text-decoration: none;
+            color: #4c81af; /* Adjust the color to your preference */
+            display: block;
+            text-align: center; /* Center the text */
+            margin-top: 10px; /* Add some space between the button and the link */
+        }
+        
     </style>
 </head>
 <body>
-<form action="/auth" method="post">
+<form id="loginForm" onsubmit="submitForm(event)">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
     <br>
@@ -61,6 +74,34 @@
     <input type="password" id="password" name="password" required>
     <br>
     <button type="submit">Log In </button>
+    <a href="/sign-up">Dont have an account yet? Sign up!</a> 
+    <p id="logIn-error"></p>
 </form>
+
+<script>
+    function submitForm(event) {
+        event.preventDefault(); // Предотвращаем отправку формы по умолчанию
+
+        let formData = new FormData(document.getElementById('loginForm')); // Получаем данные формы
+
+        fetch('/auth', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => {
+            if (response.ok) {
+                // Если ответ успешен, перенаправляем пользователя на другую страницу
+                window.location.href = '/chat'; // Замените на адрес нужной вам страницы
+            } else {
+                // Если ответ неуспешен, обрабатываем ошибку
+                throw new Error('Login failed');
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            document.getElementById('logIn-error').textContent = 'Incorrect username or password';
+        });
+    }
+</script>
 </body>
 </html>
