--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -54,27 +54,27 @@
         }
 
         #chat-area {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 50%; /* Changed max-width to width */
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    background-color: var(--areas-back-color);
-    border-radius: 8px;
-    border: 1px solid #555;
-    overflow: hidden;
-}
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 50%; /* Changed max-width to width */
+        margin: auto;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        background-color: var(--areas-back-color);
+        border-radius: 8px;
+        border: 1px solid #555;
+        overflow: hidden;
+    }
 
-#messages_list {
-    flex: 1;
-    overflow-y: auto;
-    padding: 10px;
-    background-color: var(--areas-back-color);
-    border-radius: 8px;
-    max-height: 85vh;  /* Changed max-height to 50% of the viewport height */
-}
+    #messages_list {
+        flex: 1;
+        overflow-y: auto;
+        padding: 10px;
+        background-color: var(--areas-back-color);
+        border-radius: 8px;
+        max-height: 85vh;  /* Changed max-height to 50% of the viewport height */
+    }
 
     .user-message {
         border: 25px;
@@ -90,13 +90,17 @@
     }
 
     .current-user-message {
+ 
+        background-color: black;
         border: 25px;
-        background-color: var(--button-back-color);
         border-radius: 8px;
         padding: 15px;
         margin: 4px 0;
         font-size: medium;
         border: 1px solid #555;
+        overflow-x: none;
+        word-wrap: break-word; /* Add this line to enable word wrapping */
+        white-space: pre-line;
     }
 
    .mesage-username {
@@ -196,6 +200,7 @@
 
     
 <script defer>
+
     let ws;
     let token = document.cookie.split('; ').find(row => row.startsWith('access_token')).split('=')[1];
     
@@ -221,27 +226,40 @@
         });
     }
     loadUserInfo();
+
+</script>
+
+<script defer>
     
+    function getCurrentUser() {
+        const currentUserElement = document.getElementById('current-user');
+        if (currentUserElement) {
+            return currentUserElement.textContent;
+        } else {
+            return null; // если элемент с id "current-user" не найден
+        }
+    }
+
     ws.onmessage = function(event) {
-        
-        console.log("current_user: "+current_user);
+        let current_user=getCurrentUser()
         let messagesDiv = document.getElementById('messages_list');
-        let messageData = event.data.split(' - '); // Разделяем данные на части по символу " - "
+        let messageData = event.data.split(' - ');
         let timeData = messageData[0].trim();
-        let time = timeData.substr(11, 5); // Получаем только часы и минуты
+        let time = timeData.substr(11, 5);
 
         let userData = messageData[1].split(':');
-        let user_email = userData[0]; // Получаем полную почту пользователя без обрезания
-        let messageText = userData.slice(1).join(':').trim(); // Получаем текст сообщения (с учётом возможного наличия ':' в сообщении)
+        let user_email = userData[0].trim(); // Используйте trim() здесь
+        let messageText = userData.slice(1).join(':').trim();
 
         let message = document.createElement('div');
-        if(current_user == user_email) {
+        console.log("current_user: " +current_user);
+        console.log("this_user: " +user_email);
+        if (current_user.trim() === user_email) { // Используйте trim() здесь
             message.className = 'current-user-message';
-        }
-        else {
+        } else {
             message.className = 'user-message';
         }
-        message.className = 'user-message';
+        //message.className = 'user-message';
         let userNameElement = document.createElement('div');
         userNameElement.textContent = `${user_email} - ${time}`;
         userNameElement.className = 'message-username';
@@ -269,6 +287,7 @@
                         userElement.className = 'user';
                         let userNameElement = document.createElement('div');
                         userNameElement.textContent = user.name;
+                      
                         userNameElement.className = 'user-name';
 
                         let userEmailElement = document.createElement('div');
@@ -310,6 +329,8 @@
             }
         });
 }
+
+    
 
     document.getElementById("messageInput").addEventListener("keyup", function(event) {
         if (event.key === "Enter") {
