--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -91,7 +91,7 @@
 
     .current-user-message {
  
-        background-color: black;
+        background-color: var(--button-back-color);
         border: 25px;
         border-radius: 8px;
         padding: 15px;
@@ -126,6 +126,7 @@
         padding: 0 10px;
         overflow: auto;
         resize: none; /* Prevent user from resizing the textarea */
+
     }
 
     button {
@@ -167,6 +168,10 @@
             color: #ffffff;
         }
 
+    #current-user {
+        background-color: var(--button-back-color);
+    }
+
     </style>
 </head>
 <body>
@@ -192,7 +197,7 @@
 
             </div>
             <div class="input-group">
-                <textarea id="messageInput" class="form-control" autocomplete="off"></textarea>
+                <textarea id="messageInput" class="form-control" autocomplete="off" maxlength="1000"></textarea>
                 <button onclick="sendMessage()">Send</button>
             </div>
         </div>
@@ -201,79 +206,85 @@
     
 <script defer>
 
+    //let ws;
+    //let token = document.cookie.split('; ').find(row => row.startsWith('access_token')).split('=')[1];
+    
+
+    // function connectWebSocket() {
+    //     ws = new WebSocket(`ws://localhost:8000/ws?token=${token}`);
+    // }
+
+    // connectWebSocket();
+
     let ws;
     let token = document.cookie.split('; ').find(row => row.startsWith('access_token')).split('=')[1];
-    
-
-    function connectWebSocket() {
-        ws = new WebSocket(`ws://localhost:8000/ws?token=${token}`);
-    }
-
-    connectWebSocket();
-
     let current_user;
     function loadUserInfo() {
-    fetch('/user-info')
-        .then(response => response.json())
-        .then(userInfo => {
-        let usersArea = document.getElementById('current-user');
-        usersArea.textContent = userInfo.email;
-        current_user=userInfo.email; // Здесь устанавливаем email как текст
+        fetch('/user-info')
+            .then(response => response.json())
+            .then(userInfo => {
+                let usersArea = document.getElementById('current-user');
+                usersArea.textContent = userInfo.email; // Устанавливаем информацию о пользователе в элемент
+                current_user = userInfo.email;
+            })
+            .catch(error => {
+                console.error('Ошибка при получении информации о пользователе:', error);
+            });
+    }
+
+    function connectWebSocket(current_user) {
+        ws = new WebSocket(`ws://localhost:8000/ws?token=${token}`);
+        ws.onmessage = function(event) {
+            let messagesDiv = document.getElementById('messages_list');
+            let messageData = event.data.split(' - ');
+            let timeData = messageData[0].trim();
+            let time = timeData.substr(11, 5);
+
+            let userData = messageData[1].split(':');
+            let user_email = userData[0].trim(); // Используйте trim() здесь
+            let messageText = userData.slice(1).join(':').trim();
+
+            let message = document.createElement('div');
+            console.log(`current_user: ${current_user} real_user - ${user_email}`);
         
-        })
-        .catch(error => {
-        console.error('Ошибка при получении информации о пользователе:', error);
-        });
+            if (current_user === user_email) { // Используйте trim() здесь
+                message.className = 'current-user-message';
+            } else {
+                message.className = 'user-message';
+            }
+            //message.className = 'user-message';
+            let userNameElement = document.createElement('div');
+            userNameElement.textContent = `${user_email} - ${time}`;
+            userNameElement.className = 'message-username';
+
+            let messageElement = document.createElement('div');
+            messageElement.textContent = messageText;
+            messageElement.className = 'message-text';
+
+            message.appendChild(userNameElement);  // Добавляем элемент с временем и почтой пользователя в сообщение
+            message.appendChild(messageElement);  // Добавляем элемент с текстом сообщения в сообщение
+
+            messagesDiv.appendChild(message);
+            limitMessages();
+        };
     }
-    loadUserInfo();
 
-</script>
 
-<script defer>
-    
-    function getCurrentUser() {
-        const currentUserElement = document.getElementById('current-user');
-        if (currentUserElement) {
-            return currentUserElement.textContent;
-        } else {
-            return null; // если элемент с id "current-user" не найден
-        }
+    function loadUserInfoAndConnectWebSocket() {
+        fetch('/user-info')
+            .then(response => response.json())
+            .then(userInfo => {
+                let usersArea = document.getElementById('current-user');
+                usersArea.textContent = userInfo.email; // Устанавливаем информацию о пользователе в элемент
+                connectWebSocket(userInfo.email); // Подключаем WebSocket после получения информации о пользователе
+            })
+            .catch(error => {
+                console.error('Ошибка при получении информации о пользователе:', error);
+            });
     }
 
-    ws.onmessage = function(event) {
-        let current_user=getCurrentUser()
-        let messagesDiv = document.getElementById('messages_list');
-        let messageData = event.data.split(' - ');
-        let timeData = messageData[0].trim();
-        let time = timeData.substr(11, 5);
+    loadUserInfoAndConnectWebSocket();
 
-        let userData = messageData[1].split(':');
-        let user_email = userData[0].trim(); // Используйте trim() здесь
-        let messageText = userData.slice(1).join(':').trim();
-
-        let message = document.createElement('div');
-        console.log("current_user: " +current_user);
-        console.log("this_user: " +user_email);
-        if (current_user.trim() === user_email) { // Используйте trim() здесь
-            message.className = 'current-user-message';
-        } else {
-            message.className = 'user-message';
-        }
-        //message.className = 'user-message';
-        let userNameElement = document.createElement('div');
-        userNameElement.textContent = `${user_email} - ${time}`;
-        userNameElement.className = 'message-username';
-
-        let messageElement = document.createElement('div');
-        messageElement.textContent = messageText;
-        messageElement.className = 'message-text';
-
-        message.appendChild(userNameElement);  // Добавляем элемент с временем и почтой пользователя в сообщение
-        message.appendChild(messageElement);  // Добавляем элемент с текстом сообщения в сообщение
-
-        messagesDiv.appendChild(message);
-        limitMessages();
-    }
 
         function loadUsers() {
             fetch('/users')
